added classifiers to pyproject.tom;, updated version to 0.10

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,21 @@ requires-python = ">= 3.9"
 license = "GPL 3.0"
 description = "A backgroud application that automates routine AiM tasks"
 dynamic = ["version"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Natural Language :: English",
+    "Environment :: Win32 (MS Windows)",
+    "Environment :: X11 Applications :: Qt",
+
+]
 
 [project.gui-scripts]
 aimhelper = "__main__:main"
